[project]
name = "hf-datasets-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vegctrp" }
]
dependencies = [
    "datasets>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hf_datasets_playground"]
