[project]
name = "hf-datasets-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vegctrp" }
]
dependencies = [
    "datasets>=3.1.0",
    "pydantic>=2.10.1",
    "transformers>=4.46.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.3.3",
    "mypy>=1.13.0",
]

[project.scripts]
hello = "hf_datasets_playground:hello"

[tool.rye.scripts]
ruffcheck = { cmd = "ruff check src" }
mypycheck = { cmd = "mypy src" }
pytestcheck = { cmd = "pytest" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hf_datasets_playground"]

[tool.mypy]
python_version = "3.11"
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs/"

[[tool.mypy.overrides]]
module = ['datasets', 'transformers']
ignore_missing_imports = true

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = []

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests",]
python_functions = "test_*"
